Bug 426774 - Min and max CPU scheduler priority values is mixed up
Summary: Min and max CPU scheduler priority values is mixed up
Status: RESOLVED FIXED
Alias: None
Product: ksysguard
Classification: Unmaintained
Component: libksysguard (other bugs)
Version First Reported In: 5.19.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-20 14:02 UTC by Yaroslav Sidlovsky
Modified: 2020-10-19 23:43 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Visual representation of the bug (26.57 KB, image/png)
2020-09-20 14:02 UTC, Yaroslav Sidlovsky
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yaroslav Sidlovsky 2020-09-20 14:02:05 UTC
Created attachment 131807 [details]
Visual representation of the bug

SUMMARY


STEPS TO REPRODUCE
1. Open ksysguard;
2. Select process in the list, do right click and select "Set priority..." in the menu;
3. See values of maximum and minimum priority for CPU scheduler.

OBSERVED RESULT
Lowest priority is 20 and highest priority is -19.

EXPECTED RESULT
Lowest priority should be 19 and highest should be -20, according to the `man 2 nice`.
"""
The range of the nice value is +19 (low priority) to -20 (high priority).
"""

SOFTWARE/OS VERSIONS
Operating System: Fedora 32
KDE Plasma Version: 5.19.5
KDE Frameworks Version: 5.74.0
Qt Version: 5.14.2
Kernel Version: 5.8.4-200.fc32.x86_64
OS Type: 64-bit
Processors: 4 × AMD FX(tm)-9590 Eight-Core Processor
Memory: 22.4 ГиБ of RAM
Graphics Processor: GeForce GTX 1060 6GB/PCIe/SSE2
Comment 1 Bug Janitor Service 2020-09-21 10:16:07 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libksysguard/-/merge_requests/76
Comment 2 Bug Janitor Service 2020-09-22 09:13:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libksysguard/-/merge_requests/78
Comment 3 Christoph Feck 2020-10-19 18:33:20 UTC
Commit from comment 2 got merged. If it fixes this issue, please change the status.