Corrected min and max values for process priority slider

According to the `man 2 nice`:
The range of the nice value is +19 (low priority) to -20 (high priority).

BUG: 426774